--- a/css/animations/circles.css
+++ b/css/animations/circles.css
@@ -1,38 +1,33 @@
 
-#cta {
-    animation: ctaAnimation 0.5s forwards 0s ease-in-out;
-}
 
-#circle-b-1 img {
-    width: 196px;
-    margin-left: -16px;
-    margin-top: -15px;
+
+/* circles */
+#circle-1 img {
 
     animation: reverseRotateAnimation 20s infinite 0s linear;
 }
 
-#circle-b-2 img {
+#circle-2 img {
     animation: rotateAnimation 10s infinite 0s linear;
 }
 
-#circle-b-3 img {
-    width: 140px;
+#circle-3 img {
     transform: perspective(1200px) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
     translateX(8px) translateY(8px) translateZ(50px) ;
 }
 
 
-#circle-container2 #circle-b-1 {
+#circle-container #circle-1 {
     transform: perspective(1200px) rotateX(70deg) rotateY(0deg) rotateZ(0deg)
     translateX(15px) translateY(190px) translateZ(20px) ;
 }
 
-#circle-container2 #circle-b-2 {
+#circle-container #circle-2 {
     transform: perspective(1200px) rotateX(40deg) rotateY(0deg) rotateZ(0deg)
     translateX(15px) translateY(20px) translateZ(0px) ;
 }
 
-#circle-container2 #circle-b-3 {
+#circle-container #circle-3 {
     transform: perspective(1200px) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
     translateX(23px) translateY(5px) translateZ(0px) ;
 }
@@ -87,19 +82,11 @@
 
 
 
+/* cta*/
 
-
-/* ANIMATION */
-
-#header:hover #rocket img  {
-    animation: rocketShake 0.15s infinite 0s ease-in-out;
+#cta {
+    animation: ctaAnimation 0.5s forwards 0s ease-in-out;
 }
-#header:hover #rocket  {
-    animation: rocketMove 2s infinite 0s ease-in-out;
-}
-
-
-
 
 @keyframes ctaAnimation{
     0%{
@@ -113,6 +100,16 @@
     100%{
         transform:  translateX(20px);
         }
+}
+
+
+/* rocket animation */
+
+#header:hover #rocket img  {
+    animation: rocketShake 0.15s infinite 0s ease-in-out;
+}
+#header:hover #rocket  {
+    animation: rocketMove 2s infinite 0s ease-in-out;
 }
 
 @keyframes rocketShake{
