--- a/css/animations/circles.css
+++ b/css/animations/circles.css
@@ -1,20 +1,4 @@
-
-
-
 /* circles */
-#circle-1 img {
-
-    animation: reverseRotateAnimation 20s infinite 0s linear;
-}
-
-#circle-2 img {
-    animation: rotateAnimation 10s infinite 0s linear;
-}
-
-#circle-3 img {
-    transform: perspective(1200px) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
-    translateX(8px) translateY(8px) translateZ(50px) ;
-}
 
 
 #circle-container #circle-1 {
@@ -32,6 +16,19 @@
     translateX(23px) translateY(5px) translateZ(0px) ;
 }
 
+#circle-1 img {
+
+    animation: reverseRotateAnimation 20s infinite 0s linear;
+}
+
+#circle-2 img {
+    animation: rotateAnimation 10s infinite 0s linear;
+}
+
+#circle-3 img {
+    transform: perspective(1200px) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+    translateX(8px) translateY(8px) translateZ(50px) ;
+}
 
 
 @keyframes rotateAnimation{
@@ -54,7 +51,7 @@
 
 
 
-
+/*
 @keyframes depthAnimation1{
     0%{
         }
@@ -79,7 +76,7 @@
         }
 }
 
-
+*/
 
 
 /* cta*/
@@ -105,12 +102,8 @@
 
 /* rocket animation */
 
-#header:hover #rocket img  {
-    animation: rocketShake 0.15s infinite 0s ease-in-out;
-}
-#header:hover #rocket  {
-    animation: rocketMove 2s infinite 0s ease-in-out;
-}
+#header:hover #rocket img  { animation: rocketShake 0.15s infinite 0s ease-in-out; }
+#header:hover #rocket  { animation: rocketMove 2s infinite 0s ease-in-out; }
 
 @keyframes rocketShake{
     0%{
